Minor corrections of the first commit

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shopify Lookalike</title>
 </head>
 <body>
     <h1>
-
+        Shopify Lookalike
     </h1>
 
 
@@ -16,6 +16,6 @@
 
 
 
-    
+
 </body>
 </html>
