Added title and some website structure

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <title>Shopify Lookalike</title>
 </head>
 <body>
+<header>
+    
+    <div>
+
+    </div>
+
+</header>
+
+<section>
+
+<div>
     <h1>
-        Shopify Lookalike
+        <span>Shopify Lookalike</span><br>What you need now
     </h1>
+</div>
+<div class="box">
+    <div class="box-image"></div>
+</div>
+
+</section>
 
 
 
